fix(shop): replace list view with cards on mobile
Make toolbar transparent on opened products
Fix query ordering bug

--- a/src/app/pages/shop/_shop-theme.scss
+++ b/src/app/pages/shop/_shop-theme.scss
@@ -7,8 +7,7 @@
 
   app-shop {
     .product-toolbar {
-      background: linear-gradient(to bottom, 
-      mat-color($primary, 0.7) 0%, rgba(255, 255, 255, 0) 100%);
+      background: transparent;
     }
     .ratings {
       box-shadow: none;
