--- a/src/app/shared/sidenav/sidenav.component.scss
+++ b/src/app/shared/sidenav/sidenav.component.scss
@@ -53,7 +53,7 @@
   min-height: 100vh;
   &.position-absolute {
     position: absolute;
-    width: fill-available;
+    width: stretch;
   }
   main {
     flex: 1 0 auto;
